# crewai-frontend

./: README.md  app.py  requirements.txt  test_pdf_parser.py
file_crew/: README.md  pyproject.toml
file_crew/src/file_crew/: crew.py  main.py
file_crew/src/file_crew/config/: agents.yaml  tasks.yaml
