[project]
name = "file_crew"
version = "0.1.0"
description = "file_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
file_crew = "file_crew.main:run"
run_crew = "file_crew.main:run"
train = "file_crew.main:train"
replay = "file_crew.main:replay"
test = "file_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
